--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 rich = "^10.1.0"
 ropper = "^1.13.6"
 keystone-engine = "^0.9.2"
+capstone = "^4.0.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.1"
